Fixed 'jumping timer' issue on personal_results.js by forcing its height

--- a/css/personal_results.less
+++ b/css/personal_results.less
@@ -14,6 +14,7 @@
     margin-top: 20px;
     font-size: 100px;
     line-height: 100px;
+    height: 100px;
    .text-shadow(0px 2px 3px #555);
   }
   .payout{
